resources/Azias/css/nibblepoker.lu.css
/* Fonts */
@font-face {
	font-family: 'Quantum';
	src: url("/resources/Quantum/Quantum.otf") format('opentype');
}

/* Background for the main container and its cards */
div#body-overlay {
	position: absolute;
	width: 100%;
	height: 100%;
	background-image: url("/resources/Azias/imgs/3px-tile.png");
	opacity: 0.3;
	margin: 0;
	padding: 0;
}
.dark-mode .card.card-bkgd {
	background: var(--dm-card-bg-color) url("/resources/Azias/imgs/3px-tile-0.2.png") repeat fixed center center;
}
.bg-very-dark.title-bkgd {
	background: repeat center center fixed;
	background-color: var(--dark-color-dark)!important;
	background-image: url("/resources/Azias/imgs/3px-tile-0.1.png");
}

/* Utilities, helpers & misc */
img.no-save {
	pointer-events: none;
}
.no-select {
	user-select: none;
}
.quantum {
	font-family: 'Quantum', sans-serif;
}
.ucase {
	text-transform: uppercase;
}
.font-size-8 {
	font-size: 0.8rem!important;
}
.font-size-10 {
	font-size: 1.0rem!important;
}
.font-size-26 {
	font-size: 2.6rem!important;
}
.font-size-28 {
	font-size: 2.8rem!important;
}
.font-size-30 {
	font-size: 3.0rem!important;
}
.text-super-muted {
	color: #89898A;
}
.square-corners {
	border-radius: 0!important;
}
.stretch-align-items {
	align-items: stretch;
}
.py-01 {
	padding-top: 0.01rem;
	padding-bottom: 0.01rem;
}

/* Unique rules */
#copyright-text {
	opacity: 0.3;
}
#privacy-footer-link {
	opacity: 0.3;
	text-decoration: none;
}
#privacy-footer-link:hover {
	opacity: 0.75;
}
#logo-sidebar {
	filter: grayscale(100%);
	width: 100%;
	height: auto;
}
#logo-footer {
	filter: grayscale(100%);
}
#page-title-bar {
	min-height: 64px;
	height: 64px;
}
#header-lang-menu {
	margin-right: calc(var(--content-and-card-spacing) * ( 2 / 3 ) );
}
#contact-tox-qrcode > img {
	height: calc( 256px * 0.75);
	-webkit-filter: invert(100%);
	filter: invert(100%);
	image-rendering: pixelated;
}
hr, hr.dark-mde, hr.subtle {
	background-color: rgba(0, 0, 0, 0) !important;
	background: rgb(93,95,97);
	background: radial-gradient(circle, rgba(83,85,87,0.8) 0%, rgba(65,67,69,0.65) 75%, rgba(17,20,23,0) 100%);
	opacity: 0.1;
	margin-top: 5px;
	margin-bottom: 5px;
}

/* Content */
/* Content > Search */
@media (max-width: 992px) {
	:root {
		--content-search-image-size: 96px;
	}
}
@media (min-width: 993px) {
	:root {
		--content-search-image-size: 128px;
	}
}
div.content-presentation-container {
	margin-bottom: 10px;
	min-height: var(--content-search-image-size);
	display: flex;
}
div.content-presentation-container > a {
	width: 100%;
	min-height: var(--content-search-image-size);
	text-align: justify;
	color: var(--dm-card-text-color);
}
div.content-presentation-container > a:hover {
	color: var(--dm-card-text-color);
	text-decoration: none;
}
div.content-search-image-container {
	background: var(--dm-card-bg-color) url("/resources/Azias/imgs/3px-tile-0.2.png") repeat fixed center center;
	box-shadow: inset 0 0 25px 1px rgba(255,255,255,0.05);
	border-radius: 8px;
	width: var(--content-search-image-size);
	height: var(--content-search-image-size);
	margin-right: 10px;
	float: left;
}
img.content-search-image {
	max-width: var(--content-search-image-size);
	max-height: var(--content-search-image-size);
	border-radius: 8px;
	box-shadow: 0 0 5px 1px rgba(0,0,0,0.3);
}
h3.content-search-title {
	float: none;
	margin: 0;
	text-align: left;
}
div.content-tag-container a:not(:first-child) {
	margin-left: 10px;
}

/* Gradient used on home page's applications card */
@media (min-width: 993px) {
	.l-lab-web {
		background: linear-gradient(90deg, rgba(101,144,134,0.3) 0%, rgba(101,144,134,0.2) 1.5px, rgba(101,144,134,0.0) 7px);
		clip-path: polygon(4px 0%, 100% 0, 100% 100%, 4px 100%, 0 calc(100% - 4px), 0 4px);
	}
	.l-lab-office {
		background: linear-gradient(90deg, rgba(64,84,59,0.5) 0%, rgba(64,84,59,0.3) 2px, rgba(64,84,59,0.0) 7px);
		clip-path: polygon(4px 0%, 100% 0, 100% 100%, 4px 100%, 0 calc(100% - 4px), 0 4px);
	}
	.l-lab-app {
		background: linear-gradient(90deg, rgba(156,23,34,0.4) 0%, rgba(156,23,34,0.3) 1.5px, rgba(156,23,34,0.0) 7px);
		clip-path: polygon(4px 0%, 100% 0, 100% 100%, 4px 100%, 0 calc(100% - 4px), 0 4px);
	}
}

/* Custom dynamic sizing for main containers in primary ".content-wrapper" */
.w-lg-p90 {
	width: 95% !important;
}
@media (max-width: 992px) {
	.w-95 {
		width: 95% !important;
	}
}
@media (min-width: 993px) {
	.w-lg-p90 {
		width: 90% !important;
	}
}

/* Fixes */
/* No idea where this is used */
div.last-inner-collapse-border-fix {
	/* TODO: Fix it when it is closed */
	border: var(--collapse-content-border-width) solid var(--dm-collapse-content-border-color) !important;
	border-top: 0 !important;
	border-bottom-left-radius: var(--collapse-content-border-radius) !important;
	border-bottom-right-radius: var(--collapse-content-border-radius) !important;
}

/* Fix for ".content-wrapper" on mobile which can be too large due to the main title */
.content-wrapper {
	max-width: 100vw;
}

